maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:20: error: illegal start of simple expression
}
^